# replm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: .env.example  BENCHMARK.md  __init__.py  config.py  plotting.py  results.py  run_all.py  run_gpt5.py  run_quick.py  runner.py  scoring.py  smoke_test.py
benchmarks/aggregation/: __init__.py  generate.py  questions.py  run.py
benchmarks/oolong/: __init__.py  fetch_trec.py  generate.py  run.py  trec_data.py
benchmarks/s_niah/: __init__.py  filler.py  generate.py  run.py
examples/: .env.example  basic_usage.py  multi_document.py  notebook.ipynb
fullstack_flask_site/: app.py  data.db  options.json  requirements.txt  secret.key
fullstack_flask_site/static/css/: style.css
fullstack_flask_site/templates/: admin_dashboard.html  admin_login.html  base.html  dashboard.html  index.html  login.html  register.html  request_made.html
src/replm/: __init__.py  async_orchestrator.py  async_sub_caller.py  budget.py  client.py  config.py  orchestrator.py  stream.py  sub_caller.py  tracing.py  wrapper.py
src/replm/sandbox/: subprocess_executor.py
src/rlm/: __init__.py  async_orchestrator.py  async_sub_caller.py  cache.py  client.py  config.py  exceptions.py  metadata.py  orchestrator.py  parser.py  prompt.py  repl.py  stream.py  sub_caller.py  types.py  wrapper.py
src/rlm/sandbox/: __init__.py  restricted.py
tests/: conftest.py  test_async.py  test_cache.py  test_client.py  test_metadata.py  test_orchestrator.py  test_parser.py  test_prompt.py  test_repl.py  test_sandbox.py  test_stream.py  test_sub_caller.py  test_tracing.py  test_wrapper.py
